--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-bootstrap",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "password.js",
   "dependencies": {
     "express": "^4.15.3",
     "nodemailer": "^4.0.1"
@@ -10,10 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
-  },
-  "engines": {
-    "node": "6.0.0"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
